--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="header__img">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="add-item">
-        <label for="add-item__input">Add Item</label>
+        <label for="add-item__input" class="label section-header">Add Item</label>
         <div class="row-wrapper">
           <input id="add-item__input" class="input" type="text">
-          <button>Add</button>
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="section-header">Todo</h3>
+      <ul id="incomplete-tasks" class="list">
+        <li class="list__item">
+          <input type="checkbox" class="checkbox">
           <label class="label">Pay Bills</label>
           <input type="text" class="input">
-          <button class="edit-btn">Edit</button>
-          <button class="del-btn">
-            <img src="./remove.svg">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn del-btn">
+            <img src="./remove.svg" class="btn__img">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="edit-mode list__item">
+          <input type="checkbox" class="checkbox">
           <label class="label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input">
-          <button class="edit-btn">Save</button>
-          <button class="del-btn">
-            <img src="./remove.svg">
+          <button class="btn edit-btn">Save</button>
+          <button class="btn del-btn">
+            <img src="./remove.svg" class="btn__img">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="section-header">Completed</h3>
+      <ul id="completed-tasks" class="list">
+        <li class="list__item">
+          <input type="checkbox" class="checkbox" checked>
           <label class="label">See the Doctor</label>
           <input type="text" class="input">
-          <button class="edit-btn">Edit</button>
-          <button class="del-btn">
-            <img src="./remove.svg">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn del-btn">
+            <img src="./remove.svg" class="btn__img">
           </button>
         </li>
       </ul>
