--- a/index.html
+++ b/index.html
@@ -6,52 +6,58 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg" class="header__img">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-item">
-        <label for="add-item__input" class="label section-header">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="add-item">
+        <h3 class="section-header add-item__header">
+          <label for="add-item__input" class="label">Add Item</label>
+        </h3>
         <div class="row-wrapper">
           <input id="add-item__input" class="input" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="section-header">Todo</h3>
-      <ul id="incomplete-tasks" class="list">
-        <li class="list__item">
-          <input type="checkbox" class="checkbox">
-          <label class="label">Pay Bills</label>
-          <input type="text" class="input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg" class="btn__img">
-          </button>
-        </li>
-        <li class="edit-mode list__item">
-          <input type="checkbox" class="checkbox">
-          <label class="label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input">
-          <button class="btn edit-btn">Save</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg" class="btn__img">
-          </button>
-        </li>
-      </ul>
-      <h3 class="section-header">Completed</h3>
-      <ul id="completed-tasks" class="list">
-        <li class="list__item">
-          <input type="checkbox" class="checkbox" checked>
-          <label class="label">See the Doctor</label>
-          <input type="text" class="input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg" class="btn__img">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section class="to-do">
+        <h3 class="section-header">Todo</h3>
+        <ul id="incomplete-tasks" class="list">
+          <li class="list__item">
+            <input type="checkbox" class="checkbox">
+            <label class="label">Pay Bills</label>
+            <input type="text" class="input">
+            <button class="btn edit-btn">Edit</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg" class="btn__img">
+            </button>
+          </li>
+          <li class="edit-mode list__item">
+            <input type="checkbox" class="checkbox">
+            <label class="label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input">
+            <button class="btn edit-btn">Save</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg" class="btn__img">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="complited">
+        <h3 class="section-header">Completed</h3>
+        <ul id="completed-tasks" class="list">
+          <li class="list__item">
+            <input type="checkbox" class="checkbox" checked>
+            <label class="label">See the Doctor</label>
+            <input type="text" class="input">
+            <button class="btn edit-btn">Edit</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg" class="btn__img">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
