refactor: add alt to pictures according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__img">
+      <img src="./eisenhower-matrix.jpg" class="header__img" alt="Picture of the eisenhower matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -29,7 +29,7 @@
             <input type="text" class="input">
             <button class="btn edit-btn">Edit</button>
             <button class="btn del-btn">
-              <img src="./remove.svg" class="btn__img">
+              <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
           <li class="edit-mode list__item">
@@ -38,7 +38,7 @@
             <input type="text" value="Go Shopping" class="input">
             <button class="btn edit-btn">Save</button>
             <button class="btn del-btn">
-              <img src="./remove.svg" class="btn__img">
+              <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
         </ul>
@@ -52,7 +52,7 @@
             <input type="text" class="input">
             <button class="btn edit-btn">Edit</button>
             <button class="btn del-btn">
-              <img src="./remove.svg" class="btn__img">
+              <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
         </ul>
