--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="page">
     <header class="header">
       <img src="./eisenhower-matrix.jpg" class="header__img" alt="Picture of the eisenhower matrix">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <section id="add-item">
@@ -27,8 +27,8 @@
             <input type="checkbox" class="checkbox">
             <label class="label">Pay Bills</label>
             <input type="text" class="input">
-            <button class="btn edit-btn">Edit</button>
-            <button class="btn del-btn">
+            <button class="btn btn--edit">Edit</button>
+            <button class="btn btn--del">
               <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
@@ -36,8 +36,8 @@
             <input type="checkbox" class="checkbox">
             <label class="label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input">
-            <button class="btn edit-btn">Save</button>
-            <button class="btn del-btn">
+            <button class="btn btn--edit">Save</button>
+            <button class="btn btn--del">
               <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
@@ -50,8 +50,8 @@
             <input type="checkbox" class="checkbox" checked>
             <label class="label">See the Doctor</label>
             <input type="text" class="input">
-            <button class="btn edit-btn">Edit</button>
-            <button class="btn del-btn">
+            <button class="btn btn--edit">Edit</button>
+            <button class="btn btn--del">
               <img src="./remove.svg" class="btn__img" alt="">
             </button>
           </li>
